web/styles/subscriptions.css
/* ... */
#groups_overlay,
#subscription_overlay {
    #user-group-creation,
    #stream-creation {
        overflow: auto;
        outline: none;
        -webkit-overflow-scrolling: touch;

        .user-group-creation-body,
        .stream-creation-body {
            /*
                45px (.subscriptions-header) +  44px (.display-type) + 60px (.modal-footer) + 15px (padding for .simplebar-content)
            */
            height: calc(95vh - 164px);
            padding: 15px 15px 0;
        }

        .modal-footer {
            position: absolute;
            bottom: 0;
            width: calc(100% - 27px);
            padding-top: 9px;
        }

        .add_all_users_to_user_group,
        .add_all_users_to_stream {
            margin-left: 10px;
        }

        .create_user_group_member_list_header,
        .create_stream_subscriber_list_header {
            margin-top: 10px;
            margin-bottom: 3px;

            & h5 {
                display: inline-block;
            }
        }

        .add-user-list-filter {
            width: 140px;
            float: right;
        }

        #user_group_creation_form,
        #stream_creation_form {
            margin: 0;

            .user_group_create_info.show {
                margin: 5px;
            }

            #user_group_creating_indicator,
            #stream_creating_indicator {
                &:not(:empty) {
                    position: absolute;
                    width: 100% !important;
                    height: calc(100% - 105px) !important;
                    display: flex !important;
                    justify-content: center;
                    align-items: center;
                    background-color: hsl(0deg 0% 100% / 90%);
                    z-index: 1;
                }

                .loading_indicator_text {
                    font-weight: 400;
                }
            }
        }
    }

    .inner-box {
        margin: 20px;
    }

    .group_settings_header,
    .stream_settings_header {
        white-space: nowrap;
        display: flex;
        margin-left: 15px;

        .tab-container {
            .ind-tab {
                padding: 3px 4px;
                width: 80px;
            }
        }

        .button-group {
            padding-top: 5px;
            margin-left: auto;
            margin-right: 18px;

            .subscribe-button,
            #preview-stream-button,
            .deactivate {
                margin-right: 3px;
                text-decoration: none;
            }
        }
    }

    .group-header,
    .stream-header {
        white-space: nowrap;
        padding-top: 10px;
        display: flex;
        align-items: center;

        .group-name-wrapper,
        .stream-name {
            position: relative;
            font-size: 1.5em;
            font-weight: 600;
            margin-left: -3px;
            margin-top: -5px;
            white-space: nowrap;
            max-width: 90%;
            flex: auto;
            min-width: 0;
            overflow-x: clip;
            text-overflow: ellipsis;

            .group-name,
            .sub-stream-name {
                display: block;
                width: 100%;
                overflow: hidden;
                text-overflow: ellipsis;
            }
        }

        .button-group {
            margin-left: auto;

            .deactivate {
                margin-right: 3px;
                text-decoration: none;
            }
        }

        .subscribe-button.unsubscribed {
            color: hsl(156deg 39% 54%);
            border-color: hsl(156deg 39% 77%);

            &:active {
                background-color: hsl(156deg 39% 54% / 20%);
            }
        }

        .large-icon {
            display: inline-block;
            vertical-align: top;
            margin-right: 8px;
            margin-top: -5px;

            &.hash::after {
                top: -1px;
                font-size: 1.09em;
                font-weight: 800;
            }

            .zulip-icon {
                font-size: 18px;
                position: relative;
                top: 1px;
            }
        }

        .group_change_property_info,
        .stream_change_property_info {
            vertical-align: top;
            margin: 0 5px 0 0;
        }
    }

    .group-description-wrapper,
    .stream-description {
        word-break: break-all;
        margin-bottom: 5px;

        .no-description {
            font-style: italic;
            color: hsl(0deg 0% 67%);
        }
    }

    .checkmark {
        display: none;
        margin-left: 5px;
        color: hsl(0deg 0% 67%);

        cursor: pointer;

        &.show {
            display: block;
        }
    }

    .hash::after {
        position: relative;
        content: "#";
    }

    .settings {
        position: relative;
        height: calc(100% - 45px);
        overflow-y: auto;
        -webkit-overflow-scrolling: touch;

        .tab-container {
            padding-top: 5px;
        }
    }

    .subscription_settings {
        display: none;
        position: relative;
        width: 100%;
        margin: 0 auto;
        border-radius: 4px;
        top: -1px;

        &.show {
            display: block;
        }
    }

    #personal-stream-settings {
        .stream_change_property_status {
            margin: 9px auto 3px 3px;
        }
    }

    .copy_email_button {
        padding: 10px 15px;
    }

    .loading_indicator_text {
        font-weight: 400;
        line-height: 20px;
    }

    .subsection-parent .input-group {
        & input[type="checkbox"] {
            margin-top: 0;
        }

        &:last-of-type {
            border-bottom: none;
        }

        .sp-replacer {
            box-shadow: none;
        }

        & input[type="radio"] {
            margin-right: 5px;
        }

        .inline {
            display: inline !important;
        }
    }
}
/* ... */

